fixed bg not showing on safari broswer

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,6 +4,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
   height: 100vh;
   margin-bottom: 200px;
 }
